--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
   "dependencies": {
     "firebase": "^10.1.0"
-  }
+  },
+  "name": "socialrestaurantswebapp",
+  "description": "",
+  "version": "1.0.0",
+  "main": "socialRestaurant.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
